tests/snapshots/conformance__n_structure_unclosed_array_unfinished_true.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[ false, tru
stdout --- 
<empty>
stderr --- 
error: unexpected character `t`. expected start of a json value
 --> stdin:1:10
  |
1 | [ false, tru
  |          ^
